<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">multi Player</string>
    <string name="developer">Developed by Aman Kumar</string>
    <string name="upperBg">upperBg</string>
    <string name="lowerBg">lowerBg</string>
    <string name="vs_difficult_bot">vs Difficult Bot</string>
    <string name="vs_medium_bot">vs Medium Bot</string>
    <string name="vs_easy_bot">vs Easy Bot</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="avatar1">avatar 1</string>
    <string name="avatar2">avatar 2</string>
    <string name="avatar3">avatar 3</string>
    <string name="avatar4">avatar 4</string>
    <string name="avatar5">avatar 5</string>
    <string name="avatar6">avatar 6</string>
    <string name="avatar7">avatar 7</string>
    <string name="avatar8">avatar 8</string>
    <string name="avatar9">avatar 9</string>
    <string name="avatar10">avatar 10</string>
    <string name="avatar11">avatar 11</string>
    <string name="avatar12">avatar 12</string>
    <string name="avatar13">avatar 13</string>
    <string name="avatar14">avatar 14</string>
    <string name="avatar15">avatar 15</string>
    <string name="avatar16">avatar 16</string>
    <string name="avatar17">avatar 17</string>
    <string name="avatar18">avatar 18</string>
    <string name="enter_the_names">Enter the Names</string>
    <string name="start_game">Start Game</string>
    <string name="x_logo">x logo</string>
    <string name="o_logo">o logo</string>
    <string name="rematch">Rematch</string>
    <string name="resultAvatar">resultAvatar</string>
    <string name="replayBtn">replayBtn</string>
    <string name="vs_random_bot">vs Random Bot</string>
    <string name="choose_level">Choose difficulty</string>
    <string name="play_online">Play Online</string>
    <string name="create_enter_room_code">room code</string>
    <string name="create">create</string>
    <string name="join">join</string>
    <string name="username">UserName</string>
    <string name="minimum_4_characters">minimum 4 characters</string>
    <string name="create_a_room_code_or_join_using_a_code">Create a room code or join using a code</string>
    <string name="edit">edit</string>
    <string name="done">done</string>
    <string name="loss">Loss:</string>
    <string name="draw">Draw:</string>
    <string name="win">Win:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="enter_message">Enter Message</string>
    <string name="tap_to_chat">Tap to Chat</string>
</resources>