<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AvatarChooserFragment">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:columnCount="4"
        app:columnOrderPreserved="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar1_one" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_two" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_6" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_7" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av10"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_10" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av11"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_11" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_12" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av13"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_13" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av14"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_14" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av15"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_15" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av16"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_16" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av17"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar17"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_17" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/av18"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1.15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                app:srcCompat="@drawable/avatar_18" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>